Fixed footer on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -553,10 +553,11 @@ header .banner-btn i {
 }
 
 .form-section .form-city-info {
-  width: calc(33% - 80px);
+  width: calc(33% - 65px);
   position: relative;
   padding-left: 15px;
   padding-top: 20px;
+  padding-right: 10px;
 }
 .form-section .form-city-info::after {
   content: "";
@@ -584,6 +585,7 @@ footer .footer-banner {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 35px;
 }
 
 footer .footer-logo {
@@ -602,22 +604,53 @@ footer .footer-logo a img {
 footer .footer-link h6 {
   padding-bottom: 15px;
 }
-footer .footer-link ul li a {
+/* footer .footer-link ul li {
   position: relative;
   padding-right: 15px;
-}
-footer .footer-link ul li a::after {
+  display: inline-block;
+} */
+/* footer .footer-link li img{display: inline-block;} */
+/* footer .footer-link li{display: inline-block;}
+footer .footer-link li img {
   content: "";
   position: absolute;
   top: 7px;
   right: 0;
-  background-image: url(../../public/images/footer-top-arrow.svg);
+
   height: 10px;
   width: 10px;
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: cover;
+ 
+
+}  */
+
+
+footer .footer-link img {
+  width: 10px;
+  display: inline;
+  margin-left: 3px;
 }
+
+footer span a {
+  /* display: flex; */
+  display: inline;
+  font-size: 15px;
+  color: rgb(248 246 253 / 50%);
+  line-height: 22.4px;
+  font-family: "Satoshi", sans-serif;
+}
+
+
+
+footer span {
+  display: block;
+  padding: 5px 0px;
+}
+
+
+
+
+
+
 footer .rights-info {
   text-align: center;
   padding: 24px 0px;
